# info001HugoCordon

./: README.md
QT/hist/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  minimum-prog.cpp
QT/hist/pp/: .ninja_deps  .ninja_log
QT/hist/pp/.cmake/api/v1/reply/: cmakeFiles-v1-5b10bd3847615572a5ea.json  index-2022-12-14T02-38-47-0503.json
QT/hist/pp/.cmake/api/v1/reply.prev/: cache-v2-2572979224cdfcc0c16f.json  cmakeFiles-v1-cb2020401f7b9f225efa.json  codemodel-v2-bf898a56b98c6a793c57.json  index-2022-12-14T02-38-17-0889.json  target-minimum-prog-Debug-1002a4ec61b2f0f955ce.json
QT/hist/pp/.qtc_clangd/.cache/clangd/index/: align.h.39AE23050B3DB93E.idx  allocated_ptr.h.9E55EAC1E221125A.idx  auto_ptr.h.6C881C0DF274EBDF.idx  bufferpool.hpp.6FA9B1F65F1A0550.idx  cmath.AF48DC9BE999311F.idx  core.hpp.EF3A920C16B7FD51.idx  cpp_type_traits.h.C3A811FFDE72BE58.idx  cstdint.131423F6DD978BF6.idx  exception.h.4A781029051CAFC8.idx  functional_hash.h.8E61F0A4AD90C580.idx  interface.h.588D0753FD726A7D.idx  locale_classes.tcc.DC599615D616917E.idx  mat.inl.hpp.198D0F07C93FD269.idx  minimum-prog.cpp.B18BA552AC9206E3.idx  mutex.4C8B9890DFA5E408.idx  opencv_modules.hpp.277084669E64A8E2.idx  stl_algo.h.0879FD20E2A9BB3E.idx  stl_algobase.h.2A6DCD4F39B2AA23.idx  stl_bvector.h.5CF6B01A889B6A18.idx  stl_tempbuf.h.11E137584CE4251D.idx  stl_vector.h.111C2F0358FAB00F.idx  streambuf_iterator.h.1C2B09EEC066821A.idx  strings.h.B9CFF053B196D313.idx  unique_ptr.h.CA4AF0B8829DF930.idx  utility.0D691E027DDC09AC.idx  vector.tcc.37916E8ACE7E4B6F.idx
video/: CMakeLists.txt  (+2 more)
(+71 files in other folders)
